[FINANCE] Finance logic add. maybe some logic changes later.
